Fix for color picker icon no longer being visible

--- a/platforms/common/scss/admin/particles/_colorpicker.scss
+++ b/platforms/common/scss/admin/particles/_colorpicker.scss
@@ -14,6 +14,7 @@
             position: absolute;
             top: 10px;
             right: 10px;
+            z-index: 2;
         }
 
         &.light-text {
